// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/Image Primary 1`] = `
<div
  dir="ltr"
>
  <span
    className="fd-image--m"
    style={
      Object {
        "backgroundImage": "url(https://content.fortune.com/wp-content/uploads/2019/07/hippocorn.jpg)",
      }
    }
  />
</div>
`;

exports[`Storyshots Component API/Image Shapes 1`] = `
<div
  dir="ltr"
>
  <div
    className="fr-container"
  >
    <span
      className="fd-image--s fd-image--circle"
      style={
        Object {
          "backgroundImage": "url(./assets/nature.jpg)",
        }
      }
    />
    <span
      className="fd-image--m fd-image--circle"
      style={
        Object {
          "backgroundImage": "url(./assets/nature.jpg)",
        }
      }
    />
    <span
      className="fd-image--l fd-image--circle"
      style={
        Object {
          "backgroundImage": "url(./assets/nature.jpg)",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Component API/Image Sizes 1`] = `
<div
  dir="ltr"
>
  <div
    className="fr-container"
  >
    <span
      className="fd-image--s"
      style={
        Object {
          "backgroundImage": "url(./assets/nature.jpg)",
        }
      }
    />
    <span
      className="fd-image--m"
      style={
        Object {
          "backgroundImage": "url(./assets/nature.jpg)",
        }
      }
    />
    <span
      className="fd-image--l"
      style={
        Object {
          "backgroundImage": "url(./assets/nature.jpg)",
        }
      }
    />
  </div>
</div>
`;
